--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@studio-freight/react-lenis": "^0.0.47",
+        "@vercel/analytics": "^1.6.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "framer-motion": "^11.18.2",
